crates/toml/tests/snapshots/invalid/datetime/offset-overflow-minute.stderr
TOML parse error at line 3, column 5
  |
3 | d = 1985-06-18 17:04:07+12:61
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
invalid offset, expected minutes between 00 and 59
